# raytracer

./: CMakeLists.txt  LICENSE  README.md
src/: camera.cc  camera.hh  main.cc  material.cc  material.hh  random.cc  random.hh  ray.cc  ray.hh  scene.cc  scene.hh  screen.cc  screen.hh  sphere.cc  sphere.hh  surface.hh  threadpool.cc  threadpool.hh  vec3.cc  vec3.hh  world.cc  world.hh
